# quantum-augmentation

./: .gitignore  README.md  circuit.py  main.py  model.py  pyproject.toml  results.csv  training_data.py  visualise.py
p1-outputs/: daem_phase2_results.json  daem_summary.json
src/: ansatz.py  backend.py  config.py  hamiltonian.py  measurement.py  observables.py  phase1.py  phase2.py  vqe.py
